Bug 10241 - leaked talloc_stackframes in s3 rpc code
Summary: leaked talloc_stackframes in s3 rpc code
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: DCE-RPCs and pipes (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Andrew Bartlett
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-01 08:34 UTC by Gregor Beck (550 Unknown user)
Modified: 2016-07-30 01:09 UTC (History)
1 user (show)

See Also:


Attachments
patch for master (4.58 KB, patch)
2013-11-01 08:39 UTC, Gregor Beck (550 Unknown user)
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gregor Beck (550 Unknown user) 2013-11-01 08:34:25 UTC
samba3 rpc code may leak talloc_stackframes which lets rpcclient -c epmapper panic on close.
Comment 1 Gregor Beck (550 Unknown user) 2013-11-01 08:39:58 UTC
Created attachment 9357 [details]
patch for master
Comment 2 Andrew Bartlett 2016-07-30 01:09:12 UTC
Fixed in d4a5c832f1806a9c664d52a34ea1a24eb370fa89..e2d6431cd4d3dee6a777e6c1063b42b8a0fa0cef in Samba 4.2